# CMakeCythonIntegration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
apps/: CMakeLists.txt  server.py
src/: Adder.cpp  Adder.hpp  CMakeLists.txt  Histogram.cpp  Histogram.hpp  StdoutWriter.cpp  StdoutWriter.hpp  adder.pyx  setup.py  stdoutwriter.pyx
test/: AdderTests.cpp  CMakeLists.txt  HistogramTest.cpp
tst/: AdderTests.cpp  CMakeLists.txt  StdoutWriterTest.cpp
